4-ingresses/appjs-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: appjs-headless
spec:
  clusterIP: None
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: appjs
