4-ingresses/appjs-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: appjs
spec:
  rules:
  - host: appjs.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: appjs-nodeport
          servicePort: 80
